# codex

./: .gitignore  README.md
.github/workflows/: mahayana-runtime.yml
codex-rs/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-protocol/schema/json/: codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server/src/: lib.rs
codex-rs/app-server/src/request_processors/: plugins.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: app_cmd.rs  doctor.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  sandbox_setup.rs  state_db_recovery.rs
codex-rs/cli/src/doctor/: background.rs  git.rs  output.rs  runtime.rs  (+2 more)
codex-rs/cli/tests/: features.rs  mcp_list.rs  update.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: lib.rs  mobile.rs
codex-rs/codex-mcp/src/: plugin_config.rs  plugin_config_tests.rs
codex-rs/core-plugins/src/: lib.rs  manager.rs  manager_tests.rs  manifest.rs  plugin_bundle_archive.rs
codex-rs/core/src/: lib.rs  plugin_workbench.rs
codex-rs/patches/pagable-0.4.1/: Cargo.toml
codex-rs/plugin/src/: manifest.rs  provider_tests.rs
codex-rs/secrets/src/: lib.rs  local.rs
codex-rs/tui/src/: app.rs  external_agent_config_migration_flow.rs  lib.rs  slash_command.rs  tooltips.rs  update_action.rs
mahayana-rs/: Cargo.toml  README.md  UPSTREAM.md
mahayana-rs/PRD/: chat_tui_split_layout.md
mahayana-rs/mahayana-agent/: Cargo.toml
mahayana-rs/mahayana-agent-codex/: Cargo.toml
mahayana-rs/mahayana-agent-codex/src/: lib.rs
mahayana-rs/mahayana-agent-responses/: Cargo.toml
mahayana-rs/mahayana-agent-responses/src/: lib.rs
mahayana-rs/mahayana-agent/src/: lib.rs
mahayana-rs/mahayana-cli/: Cargo.toml
mahayana-rs/mahayana-cli/src/: chat_tui.rs  main.rs  main_tests.rs  plugin_dev.rs  plugin_dev_template.rs  plugin_dev_tests.rs
mahayana-rs/mahayana-conversation/: Cargo.toml
mahayana-rs/mahayana-conversation/src/: lib.rs
mahayana-rs/mahayana-core/: Cargo.toml
mahayana-rs/mahayana-core/src/: capability.rs  capability_tests.rs  lib.rs
mahayana-rs/mahayana-ffi/: Cargo.toml
mahayana-rs/mahayana-ffi/src/: lib.rs
mahayana-rs/mahayana-miniapp/: Cargo.toml
mahayana-rs/mahayana-miniapp-bridge/: Cargo.toml
mahayana-rs/mahayana-miniapp-bridge/src/: bridge_tests.rs  lib.rs
mahayana-rs/mahayana-miniapp-bridge/wit/: host.wit
mahayana-rs/mahayana-miniapp-protocol/: Cargo.toml
mahayana-rs/mahayana-miniapp-protocol/src/: compiler.rs  lib.rs  tests.rs  types.rs
mahayana-rs/mahayana-miniapp/src/: lib.rs
mahayana-rs/mahayana-model/: Cargo.toml
mahayana-rs/mahayana-model/src/: lib.rs
mahayana-rs/mahayana-platform-core/: Cargo.toml
mahayana-rs/mahayana-platform-core/src/: commerce.rs  commerce_tests.rs  extension_manifest.rs  extension_manifest_tests.rs  identity.rs  lib.rs  miniapp_identity.rs  miniapp_identity_tests.rs  usage.rs
mahayana-rs/mahayana-platform-worker/: Cargo.toml  DEPLOYMENT_LOG.md  PRODUCTION_AUTH_CUTOVER.md  wrangler.auth-production.toml.example  wrangler.toml
mahayana-rs/mahayana-platform-worker/account-migrations/: 0001_account_auth.sql
mahayana-rs/mahayana-platform-worker/migrations/: 0001_platform.sql  0002_marketplace_platforms.sql
mahayana-rs/mahayana-platform-worker/src/: auth.rs  lib.rs  schema_tests.rs  worker_api.rs
mahayana-rs/mahayana-plugin-host/: Cargo.toml
mahayana-rs/mahayana-plugin-host/src/: lib.rs  plugin_host_tests.rs
mahayana-rs/mahayana-product/: Cargo.toml
mahayana-rs/mahayana-product/src/: lib.rs
mahayana-rs/mahayana-runtime/: Cargo.toml
mahayana-rs/mahayana-runtime/src/: lib.rs
mahayana-rs/mahayana-social/: Cargo.toml
mahayana-rs/mahayana-social/src/: lib.rs
mahayana-rs/mahayana-telegram/: Cargo.toml
mahayana-rs/mahayana-telegram/src/: lib.rs
mahayana-rs/mahayana-tool-host/: Cargo.toml
mahayana-rs/mahayana-tool-host/src/: lib.rs
mahayana-rs/mahayana-web/: Cargo.toml
mahayana-rs/mahayana-web/src/: lib.rs
mahayana-rs/providers/fabushi-miniapp-runtime/: Cargo.toml
mahayana-rs/providers/fabushi-miniapp-runtime/src/: client.rs  delivery.rs  delivery_worker.rs  dispatcher.rs  error.rs  ffi.rs  file_state.rs  lib.rs  network.rs  storage.rs
mahayana-rs/providers/miniapp-core/: Cargo.toml
mahayana-rs/providers/miniapp-core/src/: lib.rs
mahayana-rs/providers/miniapp-core/src/codex/: mod.rs  transport.rs
mahayana-rs/providers/official-miniapps/: Cargo.toml
mahayana-rs/providers/official-miniapps/src/: lib.rs  main.rs
mahayana-rs/providers/telegram-core/: Cargo.toml  README.md  upstream-pins.json
mahayana-rs/providers/telegram-core/src/: domain.rs  engine.rs  feature.rs  lib.rs
mahayana-rs/providers/telegram-core/tests/: core_engine.rs
mahayana-rs/providers/telegram-media/: Cargo.toml  README.md
mahayana-rs/providers/telegram-media/src/: lib.rs
mahayana-rs/providers/telegram-media/tests/: transfer_queue.rs
mahayana-rs/providers/telegram-network/: Cargo.toml  THIRD_PARTY_NOTICES.md
mahayana-rs/providers/telegram-network/src/: lib.rs
mahayana-rs/providers/telegram-network/tests/: tcp_transport.rs
mahayana-rs/providers/telegram-protocol/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
mahayana-rs/providers/telegram-protocol/src/: api.rs  auth.rs  crypto.rs  dc.rs  handshake.rs  lib.rs  request.rs  schema.rs  session.rs  srp.rs  tl.rs  transport.rs  updates.rs
mahayana-rs/providers/telegram-protocol/tests/: protocol_contract.rs
mahayana-rs/providers/telegram-runtime/: Cargo.toml  README.md
mahayana-rs/providers/telegram-runtime/src/: lib.rs  runtime.rs
mahayana-rs/providers/telegram-runtime/tests/: runtime_ffi.rs
mahayana-rs/providers/telegram-storage/: Cargo.toml  README.md
mahayana-rs/providers/telegram-storage/src/: cipher.rs  lib.rs  sqlite.rs
mahayana-rs/providers/telegram-storage/tests/: encrypted_store.rs
mahayana-rs/providers/telegram-wasm/: Cargo.toml  README.md
mahayana-rs/providers/telegram-wasm/src/: lib.rs
mahayana-rs/providers/telegram-wasm/tests/: wasm_contract.rs
mahayana-rs/scripts/: merge-upstream.sh
(+30 files in other folders)
