[workspace]
members = [
    "mahayana-cli",
    "mahayana-agent",
    "mahayana-agent-codex",
    "mahayana-agent-responses",
    "mahayana-conversation",
    "mahayana-core",
    "mahayana-ffi",
    "mahayana-model",
    "mahayana-miniapp",
    "mahayana-product",
    "mahayana-runtime",
    "mahayana-social",
    "mahayana-telegram",
    "mahayana-tool-host",
    "mahayana-web",
    "providers/fabushi-miniapp-runtime",
    "providers/miniapp-core",
    "providers/telegram-core",
    "providers/telegram-media",
    "providers/telegram-network",
    "providers/telegram-protocol",
    "providers/telegram-runtime",
    "providers/telegram-storage",
    "providers/telegram-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
codex-app-server-client = { path = "../codex-rs/app-server-client" }
codex-app-server-protocol = { path = "../codex-rs/app-server-protocol" }
codex-arg0 = { path = "../codex-rs/arg0" }
codex-config = { path = "../codex-rs/config" }
codex-core = { path = "../codex-rs/core" }
codex-exec-server = { path = "../codex-rs/exec-server" }
codex-feedback = { path = "../codex-rs/feedback" }
codex-model-provider-info = { path = "../codex-rs/model-provider-info" }
codex-protocol = { path = "../codex-rs/protocol" }
codex-utils-absolute-path = { path = "../codex-rs/utils/absolute-path" }
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
mahayana-agent = { path = "mahayana-agent" }
mahayana-agent-responses = { path = "mahayana-agent-responses" }
mahayana-conversation = { path = "mahayana-conversation" }
mahayana-core = { path = "mahayana-core" }
mahayana-model = { path = "mahayana-model" }
mahayana-miniapp = { path = "mahayana-miniapp" }
mahayana-runtime = { path = "mahayana-runtime" }
mahayana-social = { path = "mahayana-social" }
mahayana-telegram = { path = "mahayana-telegram" }
mahayana-tool-host = { path = "mahayana-tool-host" }
once_cell = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
ureq = { version = "2.12", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["js", "v4"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
web-sys = { version = "=0.3.103", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false

# Native applications ship the Runtime as one embedded library. Keep that
# library small enough for mobile stores while preserving the audited crate
# graph and the same JSON ABI used by desktop and Web.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

# Keep embedded Codex dependencies on the same audited revisions as the
# upstream codex-rs workspace. Cargo patches are scoped to a workspace, so the
# Mahayana embedding workspace must repeat them here.
[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", rev = "87db8bfa6dc99427fd3b071681b07fc31c6ce995" }
pagable = { path = "../codex-rs/patches/pagable-0.4.1" }
ratatui = { git = "https://github.com/nornagon/ratatui", rev = "9b2ad1298408c45918ee9f8241a6f95498cdbed2" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "0e5b2d73aa18dd9f0a50ee9ff199d5aef7594186" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }
