[workspace]
members = [
    "mahayana-cli",
    "mahayana-agent",
    "mahayana-agent-codex",
    "mahayana-agent-responses",
    "mahayana-conversation",
    "mahayana-core",
    "mahayana-ffi",
    "mahayana-model",
    "mahayana-miniapp-bridge",
    "mahayana-miniapp-protocol",
    "mahayana-miniapp",
    "mahayana-platform-core",
    "mahayana-platform-worker",
    "mahayana-plugin-host",
    "mahayana-product",
    "mahayana-runtime",
    "mahayana-social",
    "mahayana-telegram",
    "mahayana-tool-host",
    "mahayana-web",
    "providers/telegram-core",
    "providers/telegram-media",
    "providers/telegram-network",
    "providers/telegram-protocol",
    "providers/telegram-runtime",
    "providers/telegram-storage",
    "providers/telegram-wasm",
    "providers/official-miniapps",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
codex-app-server-client = { path = "../codex-rs/app-server-client" }
codex-app-server-protocol = { path = "../codex-rs/app-server-protocol" }
codex-arg0 = { path = "../codex-rs/arg0" }
codex-config = { path = "../codex-rs/config" }
codex-cli = { path = "../codex-rs/cli" }
codex-core = { path = "../codex-rs/core" }
codex-core-plugins = { path = "../codex-rs/core-plugins" }
codex-exec-server = { path = "../codex-rs/exec-server" }
codex-feedback = { path = "../codex-rs/feedback" }
codex-login = { path = "../codex-rs/login" }
codex-model-provider-info = { path = "../codex-rs/model-provider-info" }
codex-protocol = { path = "../codex-rs/protocol" }
codex-secrets = { path = "../codex-rs/secrets" }
codex-tui = { path = "../codex-rs/tui" }
codex-utils-absolute-path = { path = "../codex-rs/utils/absolute-path" }
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
crossterm = "0.28.1"
mahayana-agent = { path = "mahayana-agent" }
mahayana-agent-responses = { path = "mahayana-agent-responses" }
mahayana-conversation = { path = "mahayana-conversation" }
mahayana-core = { path = "mahayana-core" }
mahayana-model = { path = "mahayana-model" }
mahayana-miniapp-bridge = { path = "mahayana-miniapp-bridge" }
mahayana-miniapp-protocol = { path = "mahayana-miniapp-protocol" }
mahayana-miniapp = { path = "mahayana-miniapp" }
mahayana-platform-core = { path = "mahayana-platform-core" }
mahayana-plugin-host = { path = "mahayana-plugin-host" }
mahayana-runtime = { path = "mahayana-runtime" }
mahayana-social = { path = "mahayana-social" }
mahayana-telegram = { path = "mahayana-telegram" }
mahayana-tool-host = { path = "mahayana-tool-host" }
fabushi-official-miniapps = { path = "providers/official-miniapps" }
once_cell = "1"
rpassword = "7"
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "0.9.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
ureq = { version = "2.12", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["js", "v4"] }
# The patched Ratatui revision used by Codex pins this exact release.
unicode-width = "=0.2.1"
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
web-sys = { version = "=0.3.103", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "WorkerGlobalScope",
] }

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false

# Native applications ship the Runtime as one embedded library. Keep that
# library small enough for mobile stores while preserving the audited crate
# graph and the same JSON ABI used by desktop and Web.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

# Keep embedded Codex dependencies on the same audited revisions as the
# upstream codex-rs workspace. Cargo patches are scoped to a workspace, so the
# Mahayana embedding workspace must repeat them here.
[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", rev = "87db8bfa6dc99427fd3b071681b07fc31c6ce995" }
pagable = { path = "../codex-rs/patches/pagable-0.4.1" }
ratatui = { git = "https://github.com/nornagon/ratatui", rev = "9b2ad1298408c45918ee9f8241a6f95498cdbed2" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "0e5b2d73aa18dd9f0a50ee9ff199d5aef7594186" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }
