[package]
name = "mahayana-agent-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
codex-app-server-client.workspace = true
codex-app-server-protocol.workspace = true
codex-arg0.workspace = true
codex-config.workspace = true
codex-core.workspace = true
codex-exec-server.workspace = true
codex-feedback.workspace = true
codex-model-provider-info.workspace = true
codex-protocol.workspace = true
codex-utils-absolute-path.workspace = true
mahayana-agent.workspace = true
mahayana-conversation.workspace = true
mahayana-core.workspace = true
mahayana-platform-core.workspace = true
mahayana-plugin-host.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

# The full in-process Codex graph still contains a native-tls edge through
# upstream MCP/OAuth support. Mobile builds cannot discover a host OpenSSL
# installation while cross-compiling, so build and link the audited OpenSSL
# sources into the application runtime instead.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
