[package]
name = "mahayana-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mahayana"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
codex-arg0.workspace = true
codex-cli.workspace = true
codex-core-plugins.workspace = true
codex-tui.workspace = true
crossterm.workspace = true
mahayana-core.workspace = true
mahayana-ffi = { path = "../mahayana-ffi" }
mahayana-product = { package = "mahayana-platform-client", path = "../mahayana-product" }
mahayana-miniapp-protocol.workspace = true
mahayana-platform-core.workspace = true
mahayana-plugin-host.workspace = true
ratatui.workspace = true
rpassword.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
insta = "1.46.3"
