[package]
name = "mahayana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable conversation, command, event, and configuration contracts for Mahayana."
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1"
