[package]
name = "mahayana-miniapp-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telegram-style host bridge contracts for Mahayana Mini Apps."
publish = false

[dependencies]
mahayana-platform-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions = "1"
