[package]
name = "mahayana-miniapp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
mahayana-agent.workspace = true
mahayana-conversation.workspace = true
mahayana-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
uuid.workspace = true
