[package]
name = "mahayana-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin Mahayana policy and command projection over Codex plugins and MCP."
publish = false

[dependencies]
codex-app-server-protocol.workspace = true
codex-core-plugins.workspace = true
mahayana-platform-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions = "1"
