[package]
name = "mahayana-social"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
chrono.workspace = true
mahayana-conversation.workspace = true
mahayana-core.workspace = true
mahayana-product = { package = "mahayana-platform-client", path = "../mahayana-product" }
serde_json.workspace = true
tokio.workspace = true
