[package]
name = "mahayana-tool-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform sandbox tool host contract for Mahayana Agent."
publish = false

[dependencies]
async-trait.workspace = true
mahayana-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
