[package]
name = "fabushi-miniapp-runtime"
version = "0.1.0"
edition = "2021"
description = "Rust FFI runtime for Fabushi mini app host capabilities."
publish = false

[lib]
name = "fabushi_miniapp_runtime"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22"
once_cell = "1"
serde_json = "1"
ureq = "2"
