[package]
name = "fabushi-miniapp-core"
version = "0.1.0"
edition = "2021"
description = "Fabushi Mini App host capability contract, policy core, and SDK schema generator."
publish = false

[lib]
name = "fabushi_miniapp_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "miniapp-codegen"
path = "src/bin/miniapp-codegen.rs"

[dependencies]
base64 = "0.22"
once_cell = "1"
serde_json = "1"
ureq = "2"
