[package]
name = "fabushi-telegram-protocol"
version = "0.1.0"
edition = "2021"
description = "Rust authorization, schema coverage, and protocol boundary for Fabushi Telegram migration."
publish = false

[lib]
name = "fabushi_telegram_protocol"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "td-schema-audit"
path = "src/bin/td-schema-audit.rs"

[[bin]]
name = "tl-schema-codegen"
path = "src/bin/tl-schema-codegen.rs"

[dependencies]
aes = "0.8"
crc32fast = "1"
fabushi-telegram-core = { path = "../telegram-core" }
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
num-bigint-dig = { version = "0.9", features = ["zeroize"] }
pbkdf2 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
