[package]
name = "fabushi-telegram-runtime"
version = "0.1.0"
edition = "2021"
description = "C/JSON ABI runtime bridging Fabushi Flutter clients to the Telegram Rust core."
publish = false

[lib]
name = "fabushi_telegram_runtime"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
fabushi-telegram-core = { path = "../telegram-core" }
fabushi-telegram-network = { path = "../telegram-network" }
fabushi-telegram-protocol = { path = "../telegram-protocol" }
fabushi-telegram-storage = { path = "../telegram-storage" }
once_cell = "1"
serde_json = "1"
thiserror = "1"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
