[package]
name = "fabushi-telegram-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bridge for the Fabushi Telegram Rust core."
publish = false

[lib]
name = "fabushi_telegram_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
fabushi-telegram-core = { path = "../telegram-core" }
fabushi-telegram-protocol = { path = "../telegram-protocol" }
serde_json = "1"
wasm-bindgen = "0.2"
